--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title>ChadFitness</title>
 </head>
 <body>
-    <h1>Hola ya llegue. Ok</h1>
-</body>
-</html>
+    <header class="header">
+        <nav class="navbar container">
+            <img src="./IMG/v5_13.png" alt="Logo" class="logo">
+            <ul class="nav-menu">
+                <li class="nav-menu--item"><a href="/html/Premium.html">Servicios</a></li>
+                <li class="nav-menu--item"><a href="./html/integrantes.html">¿Quienes somos?</a></li>
+                <li class="nav-menu--item"><a href="/html/FAQ.html">FAQ</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1 class="hero-title">NO ERES LO <span class="white">QUE<br>LOGRAS,<br>ERES</span> LO QUE <br><span class="white">SUPERAS</span></h1>
+            </div>
+        </section>
+        <section class="benefits">
+            <div class="container">
+                <h2 class="text-center benefits-title">MAXIMIZA TUS ENTRENAMIENTOS CON</h2>
+                <div class="benefits-list">
+                    <div class="benefits-list--item">
+                        <h3 class="benefits-item--title">Rutinas de Ejercicios</h3>
+                        <img src="IMG/v5_22.png" alt="" class="benefits-item--img">
+                        <p class="benefits-item--desc">Te damos rutinas para mejorar tu performance día a día</p>
+                    </div>
+                    <div class="benefits-list--item">
+                        <h3 class="benefits-item--title">Entrenadores Personales</h3>
+                        <img src="IMG/v5_24.png" alt="" class="benefits-item--img">
+                        <p class="benefits-item--desc">Damos la oportunidad de tener un entrenamiento muy personalizado para tu persona.</p>
+                    </div>
+                    <div class="benefits-list--item">
+                        <h3 class="benefits-item--title">Videos de Alta Calidad</h3>
+                        <img src="IMG/v5_26.png" alt="" class="benefits-item--img">
+                        <p class="benefits-item--desc">Ejercicios claros y precisos para tu progreso personal.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section></section>
